--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  width: 100%;
+  height: 100vh;
+  font-family: "Pretendard";
+  line-height: 1;
+  background-color: #fff;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
